# statute-patterns

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  err_path.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
0.1.0/: index.html
0.1.0/api-rule-named/: index.html
0.1.0/api-rule-serial/: index.html
api-extract/: index.html
api-match/: index.html
api-rule/: index.html
api-rule-base/: index.html
api-rule-named/: index.html
api-rule-serial/: index.html
api-title/: index.html
details/: index.html
docs/: api-extract.md  api-match.md  api-rule-base.md  api-rule-named.md  api-rule-serial.md  api-rule.md  api-title.md  index.md
extra/: index.html
extract/: index.html
latest/api-extract/: index.html
latest/api-rule/: index.html
latest/api-rule-base/: index.html
latest/api-rule-named/: index.html
latest/api-rule-serial/: index.html
latest/api-title/: index.html
named/: index.html
notebooks/: digits.ipynb  m.ipynb  matches.ipynb  nb.ipynb
rule/: index.html
search/: search_index.json
serial/: index.html
statute_patterns/: __init__.py  __main__.py  models.py  names.py  resources.py  serials.py
statute_patterns/components/: __init__.py  category.py  details.py  rule.py  short.py  utils.py
statute_patterns/recipes/: __init__.py  digits.py
tests/: conftest.py  test_finders.py  test_main.py  test_multiple.py  test_version.py
tests/data/statutes/ra/11716/: units.yaml
tests/data/statutes/ra/11716x/: details.yaml
tests/ingredients/: test_acts.py  test_digits.py  test_letters.py  test_serializer.py  test_short.py
(+6 files in other folders)
