[tool.poetry]
name = "statute-patterns"
version = "0.3.0"
description = "Philippine statutory law pattern matching and unit retrieval."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"
homepage = "https://lawsql.com"
repository = "https://github.com/justmars/statute-patterns"
documentation = "https://justmars.github.io/statute-patterns"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Legal Industry",
  "Framework :: Pydantic",
  "Framework :: Pytest",
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0"
python-slugify = "^8.0"
python-dateutil = "^2.8.2"
email-validator = "^2.0"
pydantic = ">=2.0b3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
pytest-datadir = "^1.4.1"
pytest-cov = "^2.12.1"
pre-commit = "^3.3"
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.15"
types-Markdown = "^3.4"
types-PyYAML = "^6.0"
types-python-slugify = "^5.0"
types-python-dateutil = "^2.8"
ipykernel = "^6.23.2"

[tool.pytest.ini_options]
minversion = "7.3"
addopts = "-ra -q --cov --doctest-modules"
filterwarnings = [
  "ignore::DeprecationWarning", # DeprecationWarning: pkg_resources is deprecated as an API
]
testpaths = ["tests", "statute_patterns"]

[tool.ruff]
ignore = ["F401", "F403"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
